# python-mongodb-beanie

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
src/: db.py  main.py  models.py  nlp.py
